<resources>
    <string name="app_name">Calculator</string>
    <string name="ac">AC</string>
    <string name="del">DEL</string>
    <string name="hundred_percent">%</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="min">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="add">+</string>
    <string name="equal">=</string>
    <string name="point">.</string>
    <string name="_0">0</string>
    <string name="conv">conv</string>
    <string name="rad">rad</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="x_y">x^y</string>
    <string name="lg">lg</string>
    <string name="ln">ln</string>
    <string name="left_bracket">(</string>
    <string name="right_bracket">)</string>
    <string name="sqrt">√</string>
    <string name="factorial">!</string>
    <string name="reverse">1/x</string>
    <string name="pi">π</string>
    <string name="e">e</string>
</resources>